Closed
Bug 225991
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for editor files
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
713 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/editor/libeditor/base/nsEditor.cpp&rev=1.412&mark=741#736
Deref-error: "mSelState"
Not bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/editor/libeditor/base/nsEditor.cpp&rev=1.412&mark=2307#2302
Deref-error: "gTextNodeTag"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/editor/libeditor/base/nsEditor.cpp&rev=1.412&mark=2309#2304
Deref-error: "gTextNodeTag"
Attachment #135734 -
Flags: superreview?(roc)
Attachment #135734 -
Flags: review?(roc)
Attachment #135734 -
Flags: superreview?(roc)
Attachment #135734 -
Flags: superreview+
Attachment #135734 -
Flags: review?(roc)
Attachment #135734 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•