Bug 225991 DRefTool analysis for editor files r=roc sr=roc