editor/libeditor/base/nsEditor.cpp
@@ -738,6 +738,9 @@ nsEditor::BeginPlaceHolderTransaction(nsIAtom *aName)
     nsresult res = GetSelection(getter_AddRefs(selection));
     if (NS_FAILED(res)) return res;
     mSelState = new nsSelectionState();
+    if (!mSelState)
+      return NS_ERROR_OUT_OF_MEMORY;
+
     mSelState->SaveSelection(selection);
   }
   mPlaceHolderBatch++;
